@@ -28,6 +28,9 @@ CHANGES IN HTMLDOC v1.8.7
 	- The VALIGN code didn't handle empty cells properly.
 	- Wasn't offsetting the start of each row by the cell
 	  padding.
+	- The JPEG image loading code didn't work for some JPEG
+	  images, particularly those from digital cameras (JPEG
+	  but not JFIF format.)
 
 
 CHANGES IN HTMLDOC v1.8.6
